data/Java/17-reach-eof/4/[M]Error.txt
https://stackoverflow.com/questions/6608062/why-do-i-get-the-error-reached-end-of-file-while-parsing
[E]Program.java:26: error: reached end of file while parsing
}
 ^